# substrate-coffee-supplychain

./: .gitignore  README.md
.github/workflows/: check.yml
CoffeeChainApp/CoffeeChainApp/: AppDelegate.swift  ContentView.swift  SceneDelegate.swift
CoffeeChainApp/CoffeeChainApp.xcodeproj/: project.pbxproj
CoffeeChainApp/CoffeeChainApp.xcodeproj/project.xcworkspace/xcuserdata/dkords.xcuserdatad/: UserInterfaceState.xcuserstate
CoffeeChainApp/CoffeeChainApp.xcodeproj/xcuserdata/dkords.xcuserdatad/xcschemes/: xcschememanagement.plist
CoffeeChainApp/CoffeeChainAppTests/: CoffeeChainAppTests.swift
CoffeeChainApp/CoffeeChainAppUITests/: CoffeeChainAppUITests.swift
chain/: Dockerfile
chain/.cargo/: config
chain/node/: Cargo.toml
chain/node/src/: chain_spec.rs  service.rs
chain/pallets/coffe-products/: Cargo.toml
chain/pallets/coffe-products/src/: lib.rs  mock.rs  tests.rs  types.rs
chain/pallets/product-tracking/: Cargo.toml
chain/pallets/product-tracking/src/: lib.rs  tests.rs  types.rs
chain/pallets/raw-materials/: Cargo.toml
chain/pallets/raw-materials/src/: lib.rs  mock.rs  tests.rs  types.rs
chain/pallets/registrar/: Cargo.toml
chain/pallets/registrar/src/: lib.rs  mock.rs  tests.rs
chain/pallets/retail-transaction/: Cargo.toml
chain/pallets/retail-transaction/src/: lib.rs  mock.rs  tests.rs  types.rs
chain/pallets/supply-chain/: Cargo.toml
chain/pallets/supply-chain/src/: lib.rs  tests.rs  types.rs
chain/runtime/: Cargo.toml
chain/runtime/src/: lib.rs
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  service.rs
pallets/did/: Cargo.toml
pallets/did/src/: lib.rs  mock.rs  tests.rs
pallets/product-registry/: Cargo.toml
pallets/product-registry/src/: lib.rs  mock.rs  tests.rs
pallets/product-tracking/src/: lib.rs  mock.rs  tests.rs
pallets/rbac/: Cargo.toml
pallets/rbac/src/: lib.rs
pallets/registrar/: Cargo.toml
pallets/registrar/src/: lib.rs
pallets/template/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
scripts/: package-lock.json  package.json
scripts/src/: init.js
scripts/src/lib/: submit-signed-xt.js  types.js
ui/: Dockerfile  nginx.conf  package-lock.json  package.json
ui/src/: App.js  Dashboard.js
ui/src/components/: AccountSelector.js  AssignRevokeRole.js  BlockNumber.js  CreateNewProcess.js  CreateRawMaterial.js  CreateRetailPackaging.js  Events.js  NodeInfo.js  OrganizationSelector.js  Process.js  ProcessList.js  ProductTracking.js  RawMaterialList.js  RawMaterials.js  RegisterSale.js  RegisterShipmentForm.js  RetailPackagingList.js  Retails.js  Sales.js  SalesList.js  StepTracking.js  SupplyChain.js  index.js
ui/src/config/: common.json  development.json
ui/src/substrate-lib/: SubstrateContext.js
ui/src/substrate-lib/components/: TxButton.js
