[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
description = 'FRAME pallet template for defining custom runtime logic.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'pallet-retail-transaction'
readme = 'README.md'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '3.0.0'

[dependencies.fixed]
default-features = false
git = "https://github.com/encointer/substrate-fixed"
package = "substrate-fixed"
tag = "v0.5.7"
version = "0.5.7"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.supply-chain]
default-features = false
package = 'pallet-supply-chain'
path = '../supply-chain'
 
[dependencies.coffe-products]
default-features = false
package = 'pallet-coffe-products'
path = '../coffe-products'

[dependencies.raw-materials]
default-features = false
package = 'pallet-raw-materials'
path = '../raw-materials'
 
 [dependencies]
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0' }
frame-system = { default-features = false, git= 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-07', version = '3.0.0' }
frame-support = { default-features = false,  git= 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-07', version = '3.0.0'}
frame-benchmarking = { default-features = false, optional = true,git= 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-07', version = '3.1.0' }
sp-std = { default-features = false, git= 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-07', version = '3.0.0'  }
pallet-did = { default-features = false, git= 'https://github.com/Damfortx8/pallet-did',branch='master',   version = '3.0.0'  }
pallet-timestamp = { default_features = false,git= 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-07', version = '3.0.0'}

serde = { version = "1.0.119" }
[dev-dependencies]
sp-core = { default-features = false,   git= 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-07', version = '3.0.0'  }
sp-io = { default-features = false, git= 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-07', version = '3.0.0'  }
sp-runtime = { default-features = false, git= 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-07', version = '3.0.0'  }

[features]
default = ['std']
std = [
	'codec/std',
	'frame-support/std',
	'frame-system/std',
	'pallet-timestamp/std',
    'supply-chain/std',
    'raw-materials/std',
    'coffe-products/std',
	'frame-benchmarking/std',
    'pallet-did/std',
	'serde/std',
	'sp-std/std',
]
runtime-benchmarks = [
	'frame-benchmarking',
	'frame-support/runtime-benchmarks',
	'frame-system/runtime-benchmarks',
]
# Note: frame-support `try-runtime` feature is released after v3.
#   Uncomment the following line when `frame-support` version > `3.0.0`.
# try-runtime = ['frame-support/try-runtime']
